bug: fixed horizontal scroll [Culinary]

--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -10,6 +10,10 @@
     @apply bg-white w-[30px] h-[2px] block my-2 group-hover:bg-green-500 transition;
 }
 
+.nav-toggle-travel {
+    @apply bg-black w-[30px] h-[2px] block my-2 group-hover:bg-green-500 transition;
+}
+
 .navbar-scroll .nav-toggle {
     @apply bg-black;
 }
